# ocr_backend

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: example.rs  gpu_inference.rs  ocr_backend_api.rs
src/: lib.rs
src/filter/: line_filter.rs  mod.rs
src/format/: format.rs
src/ocr/: mod.rs  ocr.rs
