[package]
name = "ocr_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.10"
imageproc = "0.27.0"
ocr-rs = { git="https://github.com/zibo-chen/rust-paddle-ocr.git", features = ["vulkan","opencl"] }
pdfium-render = "0.9.2"

[[example]]
name = "example"
path = "examples/example.rs"

[[example]]
name = "gpu_inference"
path = "examples/gpu_inference.rs"

[[example]]
name = "ocr_backend_api"
path = "examples/ocr_backend_api.rs"
